--- a/packages/tools/src/view/down-plus/index.scss
+++ b/packages/tools/src/view/down-plus/index.scss
@@ -2,7 +2,7 @@
 .ant-card {
 
   height: calc(100vh - 5rem);
-  max-height: 15rem;
+  max-height: 20rem;
 
   width: calc(100vw - 5rem);
   max-width: 30rem;
@@ -19,7 +19,7 @@
   align-items: center;
 
   width: 100%;
-  height: 100%;
+  height: calc(100% - 3.5rem);
 
 }
 
